"correccion de namespaces"

--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,5 @@
             "email": "fragale@gmail.com"
         }
     ],
-    "require": {},
-    "autoload": {
-     "psr-4": {"Fragale\\FileHelpers\\Helpers\\": "fragale/file-helpers/src/Helpers"}
-   }
+    "require": {}
 }
