--- a/composer.json
+++ b/composer.json
@@ -9,5 +9,10 @@
             "email": "fragale@gmail.com"
         }
     ],
-    "require": {}
+    "require": {},
+    "autoload": {
+    "psr-4": {
+        "Fragale\\FileHelpers\\": "src/Helpers"
+    }
+},
 }
